--- a/iprwc-backend/iprwc/src/main/resources/application.properties
+++ b/iprwc-backend/iprwc/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 server.servlet.context-path=/api
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
