Admin section done, Modals implemented, Application connected to backend.

--- a/iprwc-frontend/angular.json
+++ b/iprwc-frontend/angular.json
@@ -68,7 +68,8 @@
               "browserTarget": "iprwc-frontend:build:production"
             },
             "development": {
-              "browserTarget": "iprwc-frontend:build:development"
+              "browserTarget": "iprwc-frontend:build:development",
+              "proxyConfig": "proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
