--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.8'
 services:
   database:
     image: mariadb
+    volumes:
+      - './data/mariadb/:/var/lib/mysql/'
     environment:
       MYSQL_DATABASE: iprwc
       MYSQL_ROOT_PASSWORD: admin
