--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,12 +3,14 @@ token.secret=iu34bnf2uio3b4f2ui3b4fi2uo34fbio234bf3f
 # Database
 # spring.datasource.url=jdbc:mariadb://localhost:3306/iprwc
 spring.datasource.url=jdbc:mariadb://iprwc:3306/iprwc
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB10Dialect
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
 
 # Api
 server.servlet.context-path=/api
