Set new password

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ token.secret=iu34bnf2uio3b4f2ui3b4fi2uo34fbio234bf3f
 spring.datasource.url=jdbc:mariadb://iprwc:3306/iprwc
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB10Dialect
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=r2yxfbs633KEAoQa3fbYH8VGXQJK74EHxtNsA7Gm
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
